--- a/Hawaii/HawaiiProd.entitlements
+++ b/Hawaii/HawaiiProd.entitlements
@@ -4,14 +4,9 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
-	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.notifications.execom.hawaii</string>
-	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.hawaii.production</string>
-		<string>$(AppIdentifierPrefix)com.hawaii.production</string>
+		<string>$(AppIdentifierPrefix)myKeychainGroup1</string>
 	</array>
 </dict>
 </plist>
